# Tsunagari

./: .gitignore  .gitmodules  CMakeLists.txt  CREDITS.txt  LICENSE  LICENSE.txt  Makefile  README  README.txt  TODO  TODO.txt
src/: CMakeLists.txt  Makefile  Makefile.common  Makefile.precompile  Makefile.precompile-headers  animation.cpp  animation.h  area-structs.h  area-tmx.cpp  area-tmx.h  area.cpp  area.h  audio.cpp  audio.h  bitrecord.cpp  bitrecord.h  bytecode.cpp  bytecode.h  cache-template.cpp  cache.h  character.cpp  character.h  client-conf.cpp  client-conf.h  client.conf  client.h  client.ini  clientconf.cpp  clientconf.h  cmd.cpp  cmd.h  common.cpp  common.h  config.h  descriptor.cpp  descriptor.h  door.h  entity-lua.cpp  entity-lua.h  entity.cpp  (+100 more)
src/babysfirst/: 1.5x-speed.script  2x-speed.script  area.example.xml  babysfirst.area  babysfirst.area.tmx  bigbaby.area  bigbaby.area.tmx  grass.sheet  grass.sprite  grue.entity  looptest.area  multile.area  player.entity  player.sheet  player.sprite  polylayer.area  polytileset.area  postMove.lua  postMove.script  snow.sheet  sprite.example.xml  step.sound  tiles.sheet  tileset.sprite  vlad.entity  vlad.sheet.license  wind.music  world.conf
src/backend-gosu/: gosu-cbuffer.h  gosu-image.cpp  gosu-image.h  gosu-tiledimage.cpp  gosu-tiledimage.h
src/dtd/: area.dtd  client.dtd  entity.dtd  entity.xsd  sprite.dtd  world.dtd  world.xsd
src/testing/: config.lua  everyArea.py  init.py  testFns.py  world.conf
src/testworld/: babysfirst.area  babysfirst.world  grue.entity  ideas.txt  notes.txt  player.sprite  (+2 more)
(+149 files in other folders)
